--- a/index.html
+++ b/index.html
@@ -1,28 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Advice generator app</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@800&display=swap" rel="stylesheet" />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+    <title>Frontend Mentor | Advice generator app</title>
+  </head>
+  <body>
+    <div id="advice_container">
+      <h1>Advice #<span id="advice_id"></span></h1>
+      <p>"<span id="advice_text"></span>"</p>
+      <div><img src="./images/pattern-divider-mobile.svg" alt="Divider" /></div>
+    </div>
 
-  Advice #<!-- Advice ID goes here -->
+    <button name="generate_advice" type="button">
+      <img src="./images/icon-dice.svg" alt="Icon dice" />
+      Generate random advice
+    </button>
 
-  "<!-- Advice text goes here -->"
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by
+      <a href="cheesedev.com">Cheese Dev</a>.
+    </div>
+    <script>
+      document.addEventListener("DOMContentLoaded", () => {
+        generateAdvice();
+      });
+      generateAdvice = () => {
+        fetch("https://api.adviceslip.com/advice").then((response) => {
+          response.json().then((slip_object) => {
+            document.getElementById("advice_id").innerText = slip_object.slip.id;
+            document.getElementById("advice_text").innerText = slip_object.slip.advice;
+          });
+        });
+      };
+      document.querySelector("[name=generate_advice]").addEventListener("click", () => {
+        generateAdvice();
+      })
+    </script>
+  </body>
 </html>
