--- a/index.html
+++ b/index.html
@@ -13,21 +13,25 @@
     <title>Frontend Mentor | Advice generator app</title>
   </head>
   <body>
-    <div id="advice_container">
-      <h1>Advice #<span id="advice_id"></span></h1>
-      <p>"<span id="advice_text"></span>"</p>
-      <div><img src="./images/pattern-divider-mobile.svg" alt="Divider" /></div>
-    </div>
+    <main>
+      <div id="advice_container">
+        <h1>Advice #<span id="advice_id"></span></h1>
+        <p>"<span id="advice_text"></span>"</p>
+        <div><img src="./images/pattern-divider-mobile.svg" alt="Divider" /></div>
+      </div>
 
-    <button name="generate_advice" type="button">
-      <img src="./images/icon-dice.svg" alt="Icon dice" />
-      Generate random advice
-    </button>
+      <button name="generate_advice" type="button">
+        <img src="./images/icon-dice.svg" alt="Icon dice" />
+        Generate random advice
+      </button>
+    </main>
+    <footer>
+      <div class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by
+        <a href="cheesedev.com">Cheese Dev</a>.
+      </div>
+    </footer>
 
-    <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by
-      <a href="cheesedev.com">Cheese Dev</a>.
-    </div>
     <script>
       document.addEventListener("DOMContentLoaded", () => {
         generateAdvice();
@@ -42,7 +46,7 @@
       };
       document.querySelector("[name=generate_advice]").addEventListener("click", () => {
         generateAdvice();
-      })
+      });
     </script>
   </body>
 </html>
